# banxe-emi-stack

./: .claudeignore  .coveragerc  .env.example  .gitignore  .gitleaks.toml  .mcp-ui.json  .mcp.json  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  AUTH_IMPORT_ORDER.md  AUTH_MATRIX.md  AUTH_PHASE_A_INVENTORY.md  AUTH_PORTS.md  AUTH_REFACTOR_TASKS.md  AUTH_ROUTER_MIGRATION.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  GAP-REGISTER.md  INSTRUCTION-LEDGER.md  INVARIANTS.md  Makefile  NEXT_SESSION_START.md  QUALITY.md  README.md  ROADMAP.md  alembic.ini  make_auth_docs.sh  package.json  pyproject.toml  requirements-compliance.txt  requirements.txt
services/safeguarding-engine/: Dockerfile  Makefile  README.md  pyproject.toml
services/safeguarding-engine/alembic/: env.py
services/safeguarding-engine/alembic/versions/: 001_initial_safeguarding_schema.py
services/safeguarding-engine/app/: __init__.py  config.py  dependencies.py  main.py
services/safeguarding-engine/app/api/: __init__.py  accounts.py  breach.py  health.py  reconciliation.py  router.py  safeguarding.py
services/safeguarding-engine/app/integrations/: __init__.py  bank_api_client.py  compliance_client.py  midaz_client.py  notification_client.py
services/safeguarding-engine/app/mcp/: __init__.py  (+1 more)
services/safeguarding-engine/tests/: conftest.py  test_api_breach.py  test_api_reconciliation.py  test_api_safeguarding.py  test_audit_logger.py  test_breach_service.py  test_internal_coverage.py  test_mcp_tools.py  test_position_calculator.py  test_reconciliation_service.py  test_safeguarding_service.py
(+2330 files in other folders)
